<resources>
    <string name="app_name">Where Am I ver - 2</string>
    <string name="logo_text">WHERE AM I</string>
    <string name="add_new_website">Add new website</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="last_search">Last Search:</string>
    <string name="emptyDate">---</string>
    <string name="search">Scan</string>
    <string name="none">---</string>
    <string name="change">Change:</string>
    <string name="position">Position:</string>
    <string name="page">Page:</string>
</resources>